# DFM

./: .flake8  .gitmodules  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  cd  codecov.yml  dataset.yaml  erspalenCodeDFM; git status --short  flux_inference.py  ion  pyproject.toml  temp_readme.md
.github/actions/test-template/: action.yml
.github/workflows/: _build_container.yml  build-docs.yml  build-test-publish-wheel.yml  changelog-build.yml  cicd-main.yml  close-inactive-issue-pr.yml  code-formatting.yml  code-linting.yml  copyright-check.yml  generate-lockfile.yml  release-docs.yml  release-freeze.yml  release.yaml  ruff.yml
.github/workflows/config/: .secrets.baseline
dev/wan21/: README.md  checkpoint_io.py  conditioning_t2v.py  data_utils.py  dataloader.py  debug_normalization.py  debug_training_shapes.py  dist_utils.py  fsdp2_utils_t2v.py  main_t2v.py  multinodes_launch.sh  mutinodes_pretrain.sh  time_shift_utils.py  trainer_t2v.py  training_step_t2v.py  validate_t2v.py
dev/wan21/data/: decode.py  decode_img.py  preprocess_resize.py  preprocess_resize_img.py
dev/wan21_copy/: checkpoint_io.py  data_utils.py  dataloader.py  fsdp2_utils_t2v.py  main_t2v.py  test_time_shift.py  test_training_step.py  trainer_t2v.py  training_step_t2v.py  validate_t2v.py
dev/wan21_copy/data/: preprocess_resize.py
dfm/: README.md  __init__.py  package_info.py
dfm/examples/Automodel/finetune/: finetune.py  wan2_1_t2v_flow.yaml  wan2_1_t2v_flow_multinode.yaml
dfm/examples/Automodel/generate/: wan_generate.py
dfm/examples/Automodel/pretrain/: pretrain.py  wan2_1_t2v_flow.yaml
dfm/examples/automodel/finetune/: finetune.py  (+1 more)
dfm/src/: README.md
dfm/src/Automodel/: README.md
dfm/src/common/: README.md  attention_wan.py
dfm/src/dtensor/: README.md
dfm/src/megatron/: README.md
docker/: Dockerfile.ci
docs/: INFORMATION_CHECKLIST.md  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  Makefile  autodoc2_docstrings_parser.py  conf.py  index.md  mcore_automodel_comparision_wan21.md  performance-summary.md  project.json
docs/about/: comparison.md  index.md
docs/about/concepts/: configuration.md  diffusion-models.md  distributed-training.md  index.md  training-paradigms.md  video-data.md
docs/automodel/: automodel_training_doc.md
docs/get-started/: QUICKSTART_STRUCTURE.md  automodel.md  index.md  inference.md.old  installation.md  megatron-wan.md  megatron.md  training.md
docs/get-started/automodel/: index.md  inference.md  training.md
docs/get-started/megatron/: index.md  inference.md  prepare-data.md  training.md
docs/reference/: data-loading.md  distributed-training.md  index.md  performance.md
docs/tutorials/: fine-tuning-pretrained-models.md  index.md  text-to-video-training.md  training-from-scratch.md
examples/: README.md  run_example.sh
examples/automodel/: README.md
examples/automodel/finetune/: finetune.py  flux_t2i_flow.yaml  hunyuan_t2v_flow.yaml  wan2_1_t2v_flow.yaml  wan2_1_t2v_flow_multinode.yaml
examples/automodel/generate/: flux_generate.py  wan_generate.py  wan_validate.py
examples/automodel/pretrain/: flux_t2i_flow.yaml  pretrain.py  wan2_1_t2v_flow.yaml  wan_cicd.yaml
examples/dtensor/: README.md
examples/dtensor/configs/: README.md
examples/dtensor/scripts/: README.md
examples/flex_attention/: __init__.py  flex_dot_product_attention.py  layerspec.py  run_simple_mcore_train_loop.py
examples/megatron/: README.md
examples/megatron/override_configs/: README.md  wan_pretrain_sample_data.yaml
examples/megatron/recipe/: README.md
examples/megatron/recipes/: README.md
nemo_dfm/: __init__.py  package_info.py
nemo_dfm/diffusion/: train.py
nemo_dfm/diffusion/data/: diffusion_taskencoder.py
nemo_dfm/diffusion/recipes/: __init__.py  flux_12b.py
nemo_dfm/diffusion/utils/: flux_pipeline_utils.py
nemo_dfm/diffusion/vae/: diffusers_vae.py
nemo_dfm/physicalai/tokenizer/: augmentors.py  test_tokenizer_model.py
nemo_dfm/sparse_attention/: accel-config.yml  sparse_attn.py  training.md
nemo_dfm/sparse_attention/kernels/: tl_base_attention.py
nemo_vfm/: __init__.py  package_info.py
nemo_vfm/diffusion/: datamodule.py  readme.rst  train.py
nemo_vfm/diffusion/data/: base.py  camera.py  camera_ctrl_utils.py  diffusion_energon_datamodule.py  diffusion_fake_datamodule.py  diffusion_mock_datamodule.py  diffusion_taskencoder.py  prepare_energon_dataset.py  prepare_energon_dataset_butterfly.py  readme.rst  test_datamodule.py
nemo_vfm/diffusion/encoders/: conditioner.py
nemo_vfm/diffusion/models/: model.py
nemo_vfm/diffusion/recipes/: __init__.py  flux_12b.py  flux_535m.py
nemo_vfm/diffusion/sampler/: conditioner.py  conditioner_configs.py
nemo_vfm/diffusion/utils/: flux_ckpt_converter.py  flux_pipeline_utils.py  mcore_parallel_utils.py
nemo_vfm/diffusion/vae/: autoencoder.py  autovae.py  blocks.py  contperceptual_loss.py  readme.rst  train_vae.py  validate_vae.py  video_vae.py
nemo_vfm/physicalai/: Dockerfile
nemo_vfm/physicalai/datasets/: mock_dataset.py
nemo_vfm/physicalai/tokenizer/: README.md  configs.py  tokenizer_model.py  train_tokenizer.py
nemo_vfm/sparse_attention/: README.md  accel-config.yml  sparse_attn.py  training.md
nemo_vfm/sparse_attention/kernels/: tl_base_attention.py  tl_blocksum_attention.py  tl_sparse_attention.py
run_dit/: dmd_distill_energon_latent.sh
run_dmd/: dmd_distill_energon_latent.sh  dmd_distill_energon_latent_dev.sh
run_vbench/: eval_vbench.sh  generate_videos_for_vbench.sh  generate_videos_for_vbench_fastgen.sh
tests/: conftest.py  run_sbatch_test.sh
tests/functional_tests/: L2_Automodel_Mock_Tests_GPU.sh  L2_Automodel_Wan21_Test.sh  L2_Functional_Tests_GPU.sh  L2_Mcore_Mock_Tests_GPU.sh  test_mcore_wan_pretrain.py  test_wa21_training_automodel.py
tests/unit_tests/: L0_Unit_Tests_CPU.sh  L0_Unit_Tests_GPU.sh  test_cpu_sample.py  test_flow_matching_automodel.py  test_gpu_sample.py  test_placeholder.py  test_wan21_training_components_automodel.py
tests/unit_tests/automodel/: test_flow_matching_pipeline.py
vfm/: __init__.py  package_info.py
(+567 files in other folders)
