# Copyright (c) 2025, NVIDIA CORPORATION.  All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "nemo-dfm"
dynamic = [
    "version",
    "readme",
]
description = "NeMo DFM - Diffusion Foundation Models"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{ name = "NVIDIA", email = "nemo-toolkit@nvidia.com" }]
maintainers = [{ name = "NVIDIA", email = "nemo-toolkit@nvidia.com" }]
keywords = [
    "NLP",
    "NeMo",
    "deep",
    "gpu",
    "language",
    "learning",
    "machine",
    "nvidia",
    "pytorch",
    "torch",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "accelerate",
    "diffusers==0.35.1",
    "easydict",
    "ftfy",
    "imageio",
    "imageio-ffmpeg",
    "opencv-python-headless==4.10.0.84",
    "megatron-energon",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
docs = [
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",    # For live doc serving while editing docs
    "sphinx-autodoc2>=0.5.0",         # For documenting Python API
    "sphinx-copybutton>=0.5.2",       # Adds a copy button for code blocks
    "myst-parser>=4.0.1",             # For our markdown docs
    "nvidia-sphinx-theme>=0.0.8",     # Our NVIDIA theme
    "sphinxcontrib-mermaid>=1.0.0",   # For mermaid diagrams
    "sphinx-design>=0.6.1",           # For our design elements
    "swagger-plugin-for-sphinx>=6.0.0", # For Swagger API documentation
]
test = [
    "coverage>=7.8.1",
    "flake8>=7.2.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-runner>=6.0.1",
]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.9.9",
    "mypy>=1.8.0",
]
build = ["setuptools", "wheel", "torch", "pybind11", "Cython>=3.0.0", "numpy<2.0.0", "ninja", "packaging", "nvidia-mathdx"]
automodel = [
    "nemo-automodel",
]
megatron-bridge = ["megatron-bridge"]
torch-cu124 = [
    "torch",
    "torchvision",
    "torchaudio",
]

[tool.setuptools]
packages = ["dfm"]

[tool.setuptools.dynamic]
version = {attr = "dfm.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.uv]
managed = true
prerelease = "allow"
# These packages require torch during build, so disable build isolation
no-build-isolation-package = [
    "transformer-engine",
    "transformer-engine-torch",
    "mamba-ssm",
    "causal-conv1d",
    "nv-grouped-gemm",
    "flash_mla",
    "flash-linear-attention",
]
override-dependencies = [
    "nvidia-modelopt[torch]>=0.37.0",
    "torch; sys_platform == 'never'",
    "torchvision; sys_platform == 'never'",
    "triton; sys_platform == 'never'",
    "transformer-engine[pytorch]>=2.9.0a0,<2.10.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[tool.uv.sources]
nemo-automodel = { path = "3rdparty/Automodel" }
megatron-bridge = { path = "3rdparty/Megatron-Bridge" }
megatron-core = { path = "3rdparty/Megatron-Bridge/3rdparty/Megatron-LM/" }
transformer-engine = { git = "https://github.com/NVIDIA/TransformerEngine.git", rev = "release_v2.9" }
nvidia-resiliency-ext = { index = "pypi" }

[project.urls]
Download = "https://github.com/NVIDIA-NeMo/DFM/releases"
Homepage = "https://github.com/NVIDIA-NeMo/DFM"

[tool.pytest.ini_options]
# durations=0 will display all tests execution time, sorted in ascending order starting from from the slowest one.
# -vv will also display tests with durration = 0.00s
addopts = "--verbose --pyargs --durations=0 --strict-markers"  # always add these arguments to pytest
testpaths = ["tests"]
# directories to ignore when discovering tests
norecursedirs = [
    "dfm",
    "external",
    "examples",
    "docs",
    "scripts",
    "tools",
    "tutorials",
    "*.egg",
    ".*",
    "_darcs",
    "build",
    "CVS",
    "dist",
    "venv",
    "{arch}"
]
# markers to select tests, use `pytest --markers` to see all available markers, `pytest -m "<marker>"` to select tests
markers = [
    "unit: marks unit test, i.e. testing a single, well isolated functionality (deselect with '-m \"not unit\"')",
    "integration: marks test checking the elements when integrated into subsystems (deselect with '-m \"not integration\"')",
    "system: marks test working at the highest integration level (deselect with '-m \"not system\"')",
    "acceptance: marks test checking whether the developed product/model passes the user defined acceptance criteria (deselect with '-m \"not acceptance\"')",
    "docs: mark tests related to documentation (deselect with '-m \"not docs\"')",
    "skipduringci: marks tests that are skipped ci as they are addressed by Jenkins jobs but should be run to test user setups",
    "pleasefixme: marks tests that are broken and need fixing",
]

[tool.ruff]

# Match black's line length
line-length = 119
target-version = "py310"

# Exclude common directories that shouldn't be linted
exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    "*.egg",
    "build",
    "dist",
    "docs/source/conf.py",
    "setup.py",
]

# Files to completely ignore
extend-exclude = [
    "*.ipynb",
]

[tool.ruff.lint]
# Configure imports sorting to match isort
select = [
    "F541",  # f-string without any placeholders
    "F401",  # imported but unused
    "E266",  # too many leading '#' for block comment
    "I",     # isort
]

# Additional rules can be added here
ignore = [
    "F821",  # undefined name
    "E741",  # ambiguous variable name
    "F841",  # local variable assigned but never used
    "E501",  # Line too long - handled by formatter
    "D101",  # docstring
    "D103",  # Missing docstring in public function
]
[tool.ruff.lint.isort]
known-first-party = ["dfm"]
known-third-party = ["examples", "scripts"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
# Ignore import violations in __init__ files
"__init__.py" = ["F401", "F403"]
# Ignore docstring requirements in test files
"test_*.py" = ["D101", "D103"]
"*_test.py" = ["D101", "D103"]
"tests/*.py" = ["D101", "D103"]

[tool.ruff.format]
# Match black configuration
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
concurrency = ["thread", "multiprocessing"]
omit = ["/tmp/*"]

[tool.coverage.paths]
source = ["dfm/", "/opt/DFM/dfm"]
